--- a/playbook.yml
+++ b/playbook.yml
@@ -3,12 +3,12 @@
   remote_user: ubuntu
   become: yes
   tasks:
-    - name: Install Docker
-      apt:
-        name:
-          - docker
-          - docker-compose
-        state: present
+    # - name: Install Docker
+    #   apt:
+    #     name:
+    #       - docker
+    #       - docker-compose
+    #     state: present
     - name: Login DockerHub
       shell: docker login -u "{{DOCKER_USERNAME}}" -p "{{DOCKER_PASSWORD}}"
     - name: Copy file
